--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react": "^18.2.0",
     "react-browser-router": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-social-icons": "^6.7.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
