--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,13 +16,16 @@
     "react-browser-router": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-social-icons": "^6.7.0",
+    "reactstrap": "^9.2.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
+    "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
