--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
     "parallax-js": "^3.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-browser-router": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -23,6 +25,7 @@
     "react-slick": "^0.29.0",
     "react-social-icons": "^6.7.0",
     "reactstrap": "^9.2.1",
+    "rsuite": "^5.49.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
     "use-places-autocomplete": "^4.0.1",
