--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.9.2",
     "react-browser-router": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-faq-component": "^1.3.4",
     "react-icons": "^4.12.0",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.1",
