--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-social-icons": "^6.7.0",
+    "react-toastify": "^10.0.4",
     "reactstrap": "^9.2.1",
     "rsuite": "^5.49.0",
     "slick-carousel": "^1.8.1",
